fix tried to load angular twice bug

--- a/client/elements/animated-grid/animated-grid.html
+++ b/client/elements/animated-grid/animated-grid.html
@@ -149,7 +149,7 @@ Polymer({
     this.$.addClass.open();
   },
   createClass: function() {
-    this.submitclass = true;
+    this.submitclass = 'true';
     console.log('polymer');
     console.log(this.classname);
   }
