--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -17,5 +17,5 @@
 <input type="submit" ng-click="submitClass()"> -->
 
    <!-- <full-page></full-page>-->
-   <animated-grid loadclasses="{{classes}}" submitclass="{{classSubmitted}}" classname="{{classname}}" bind-polymer></animated-grid>
+   <animated-grid loadclasses="{{classes}}" addcount="{{addCount}}" classname="{{classname}}" bind-polymer></animated-grid>
 
