--- a/client/app/s/s.html
+++ b/client/app/s/s.html
@@ -4,4 +4,4 @@
 <mjbe-drawing-canvas class="fit" ng-if="s.showCanvas"></mjbe-drawing-canvas>
 <problems-addition problemtype="{{s.type}}" complete="{{s.complete}}" event-namespace="s" bind-polymer></problems-addition>
 <mjbe-timer class="timer"></mjbe-timer>
-<mjbe-leaderboard></mjbe-leaderboard>
+<mjbe-leaderboard class="leaderboard" leaderboard="{{s.leaderboard}}"></mjbe-leaderboard>
