--- a/client/elements/elements.html
+++ b/client/elements/elements.html
@@ -44,4 +44,5 @@
 <link rel="import" href="mjbe-dashboard-classprogress/mjbe-collapse-list.html">
 <link rel="import" href="mjbe-modifications/mjbe-modifications.html">
 <link rel="import" href="mjbe-timer/mjbe-timer.html">
+<link rel="import" href="mjbe-leaderboard/mjbe-leaderboard.html">
 <link rel="import" href="auth-card/auth-card.html">
