--- a/client/elements/mjbe-dashboard-classprogress/mjbe-collapse-list.html
+++ b/client/elements/mjbe-dashboard-classprogress/mjbe-collapse-list.html
@@ -110,12 +110,12 @@
       }
     }
     </style>
-    <iron-ajax url="contacts.json" last-response="{{items}}" auto></iron-ajax>
+    <!--<iron-ajax url="contacts.json" last-response="{{items}}" auto></iron-ajax>-->
     <paper-toolbar>
-      <paper-icon-button icon="arrow-back" alt="Back" ui-sref="dashboard"></paper-icon-button>
-      <div class="spacer"></div>
-      <paper-icon-button icon="search" alt="Search"></paper-icon-button>
-      <paper-icon-button icon="image:view-comfy" alt="Grid view"></paper-icon-button>
+      <paper-icon-button icon="add" alt="Add student" ui-sref="dashboard"></paper-icon-button>
+      <!--<div class="spacer"></div>-->
+      <!--<paper-icon-button icon="search" alt="Search"></paper-icon-button>
+      <paper-icon-button icon="image:view-comfy" alt="Grid view"></paper-icon-button>-->
       <div class="bottom title">{{name}}</div>
     </paper-toolbar>
     <iron-list id="list" items="[[items]]" as="item">
@@ -140,10 +140,10 @@
     Polymer({
       is: 'mjbe-collapse-list',
       properties: {
-        /*items: {
+        items: {
           type: Array,
           computed: 'parseData(data)'
-        },*/
+        },
         name: {
           type: String,
           notify: true
