--- a/client/elements/mjbe-dashboard-classprogress/mjbe-collapse-list.html
+++ b/client/elements/mjbe-dashboard-classprogress/mjbe-collapse-list.html
@@ -112,7 +112,7 @@
     </style>
     <!--<iron-ajax url="contacts.json" last-response="{{items}}" auto></iron-ajax>-->
     <paper-toolbar>
-      <paper-icon-button icon="add" alt="Add student" ui-sref="dashboard"></paper-icon-button>
+      <paper-icon-button icon="add" alt="Add student" on-tap="inviteModal"></paper-icon-button>
       <!--<div class="spacer"></div>-->
       <!--<paper-icon-button icon="search" alt="Search"></paper-icon-button>
       <paper-icon-button icon="image:view-comfy" alt="Grid view"></paper-icon-button>-->
@@ -134,6 +134,12 @@
         </div>
       </template>
     </iron-list>
+
+    <paper-dialog id="inviteDialog" modal>
+      <paper-input label="Student email" value="{{classname::input}}" type="text" autofocus></paper-input>
+      <paper-button raised dialog-confirm on-tap="createClass">Invite</paper-button>
+      <paper-button dialog-confirm autofocus>Cancel</paper-button>
+    </paper-dialog>
   </template>
   <script>
   HTMLImports.whenReady(function() {
@@ -176,6 +182,9 @@
         } catch (e) {
           return [];
         }
+      },
+      inviteModal: function() {
+        this.$.inviteDialog.open();
       }
     });
   });
