add validation to add class

--- a/client/elements/animated-grid/animated-grid.html
+++ b/client/elements/animated-grid/animated-grid.html
@@ -64,10 +64,10 @@
       <span>Modifications</span>
     </div>
     <paper-dialog id="addClass" modal>
-      <paper-input label="Class name" value="{{classname::input}}" type="text" autofocus></paper-input>
+      <paper-input label="Class name" value="{{classname::input}}" type="text" autofocus auto-validate minlength="2" error-message="Enter at least two characters"></paper-input>
 
-      <paper-button raised dialog-confirm on-tap="createClass">Enter</paper-button>
-      <paper-button dialog-confirm autofocus>Cancel</paper-button>
+      <paper-button raised on-tap="createClass">Enter</paper-button>
+      <paper-button dialog-confirm>Cancel</paper-button>
     </paper-dialog>
   </template>
 </dom-module>
@@ -162,7 +162,10 @@ Polymer({
   createClass: function() {
     console.log('polymer');
     console.log(this.classname);
+    if (this.classname.length > 1) {
+    this.$.addClass.close();
     this.addcount = '' + (Number.parseInt(this.addcount) + 1);
+  }
   }
 });
 </script>
