selecting by ids

--- a/client/elements/animated-grid/animated-grid.html
+++ b/client/elements/animated-grid/animated-grid.html
@@ -49,7 +49,7 @@
     </style>
     <paper-tabs selected="{{selectedClass}}" scrollable id="classSelect" attr-for-selected="value">
       <template is="dom-repeat" items="{{classes}}">
-        <paper-tab value="{{item.name}}">{{item.name}}</paper-tab>
+        <paper-tab value="{{item.id}}">{{item.name}}</paper-tab>
       </template>
       <!--<paper-tab on-tap="openModal">Add class...</paper-tab>-->
       <paper-tab value="test">[[selectedClass]]</paper-tab>
