--- a/client/elements/animated-grid/animated-grid.html
+++ b/client/elements/animated-grid/animated-grid.html
@@ -47,13 +47,17 @@
       width: 60%;
     }
     </style>
+    <!--<paper-tab on-tap="openModal">Add class...</paper-tab>-->
     <paper-tabs selected="{{selectedClass}}" scrollable id="classSelect" attr-for-selected="value">
+    <paper-icon-button icon="add" style="color:white;" alt="Add student" on-tap="openModal"></paper-icon-button>
       <template is="dom-repeat" items="{{classes}}">
         <paper-tab value="{{item.id}}">{{item.name}}</paper-tab>
       </template>
-      <!--<paper-tab on-tap="openModal">Add class...</paper-tab>-->
+      
       <paper-tab value="test">[[selectedClass]]</paper-tab>
+
     </paper-tabs>
+
     <div class="tile d3">
       <span>[[item.value]]</span>
     </div>
