--- a/client/elements/animated-grid/animated-grid.html
+++ b/client/elements/animated-grid/animated-grid.html
@@ -48,17 +48,16 @@
     }
     </style>
     <paper-tabs selected="{{selectedclass}}" scrollable id="classSelect" attr-for-selected="value">
-    <paper-icon-button icon="add" style="color:white;" alt="Add class" on-tap="openModal"></paper-icon-button>
+      <paper-icon-button icon="add" style="color:white;" alt="Add class" on-tap="openModal"></paper-icon-button>
       <template is="dom-repeat" items="{{classes}}">
         <paper-tab value="{{item._id}}">{{item.name}}</paper-tab>
       </template>
     </paper-tabs>
-
     <div class="tile d3">
       <span>[[item.value]]</span>
     </div>
     <div class="tile list">
-      <mjbe-collapse-list activeclass="{{selectedclass}}" email="{{email}}" invitecount="{{invitecount}}" data="{{loadclasses}}"></mjbe-collapse-list>
+      <mjbe-collapse-list activeclass="{{selectedclass}}" email="{{email}}" invitecount="{{invitecount}}" data="{{students}}"></mjbe-collapse-list>
     </div>
     <div class="tile mod">
       <span>Modifications</span>
@@ -82,6 +81,9 @@ Polymer({
     loadclasses: {
       type: String,
       notify: true
+    },
+    students: {
+      computed: 'getStudents(classes, selectedclass)'
     },
     classes: {
       computed: 'parseClasses(loadclasses)'
@@ -155,6 +157,19 @@ Polymer({
       return JSON.parse(classes);
     } catch (e) {
       return [];
+    }
+  },
+  getStudents: function(classes, selected) {
+    console.log(classes);
+    console.log(selected);
+    for (var i = 0; i < classes.length; i++) {
+      //console.log('comparing')
+      //console.log(classes[i]._id);
+      //console.log(selected);
+      if (classes[i]._id === selected) {
+        console.log('returning');
+        return JSON.stringify(classes[i].students);
+      }
     }
   },
   openModal: function() {
