--- a/client/index.html
+++ b/client/index.html
@@ -57,9 +57,9 @@
               <paper-tab ui-sref="main" ng-show="loggedIn">Home</paper-tab>
               <paper-tab ui-sref="landing" ng-show="!loggedIn">Home</paper-tab>
               <paper-tab ui-sref="profile" ng-show="loggedIn">Profile</paper-tab>
-              <paper-tab ui-sref="about" ng-show="!loggedIn">About</paper-tab>
               <paper-tab ui-sref="badges" ng-show="loggedIn">Badges</paper-tab>
               <paper-tab ui-sref="dashboard" ng-show="isTeacher">Dashboard</paper-tab>
+              <paper-tab ui-sref="about">About</paper-tab>
               <paper-tab ui-sref="login" ng-show="!loggedIn">Sign In</paper-tab>
               <paper-tab ui-sref="logout" ng-show="loggedIn">Sign Out</paper-tab>
             </paper-tabs>
