--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -17,5 +17,5 @@
 <input type="submit" ng-click="submitClass()"> -->
 
    <!-- <full-page></full-page>-->
-   <animated-grid loadclasses="{{classes}}" addcount="{{addCount}}" classname="{{classname}}" email="{{email}}" invitecount="{{inviteCount}}" selectedclass="{{activeClass}}" bind-polymer></animated-grid>
+   <mjbe-dashboard loadclasses="{{classes}}" addcount="{{addCount}}" classname="{{classname}}" email="{{email}}" invitecount="{{inviteCount}}" selectedclass="{{activeClass}}" bind-polymer></mjbe-dashboard>
 
