--- a/client/elements/mjbe-dashboard/mjbe-dashboard.html
+++ b/client/elements/mjbe-dashboard/mjbe-dashboard.html
@@ -56,7 +56,7 @@
     </paper-tabs>
     <!--dashboard content-->
     <div class="tile d3">
-      <span>[[item.value]]</span>
+      <span>Cool D3 graph here</span>
     </div>
     <div class="tile list">
       <mjbe-collapse-list activeclass="{{selectedclass}}" email="{{email}}" invitecount="{{invitecount}}" data="{{students}}"></mjbe-collapse-list>
