--- a/client/elements/auth-card/auth-card.html
+++ b/client/elements/auth-card/auth-card.html
@@ -152,7 +152,7 @@
         } else if (!this.useremail) {
           this.$.errortoast.text = 'Please enter your email address.';
           this.$.errortoast.show();
-        } else if (!this.userpass && this.userpass !== this.verifypass) {
+        } else if (!this.userpass || this.userpass !== this.verifypass) {
           this.$.errortoast.text = 'Passwords do not match.';
           this.$.errortoast.show();
         } else {
